@@ -29,7 +29,7 @@ class LFSWM2_Class;
 #include "lfswm2Class.h"
 #include "clientClass.h"
 
-enum {NORMALWINDOW=0,DESKTOPWINDOW,DOCKWINDOW,MENUWINDOW,DIALOGWINDOW,TOOLWINDOW,NOTIFICATION,UNKNOWNTYPE};
+enum {NORMALWINDOW=0,DESKTOPWINDOW,DOCKWINDOW,MENUWINDOW,DIALOGWINDOW,TOOLWINDOW,NOTIFICATION,UTILITYWINDOW,UNKNOWNTYPE};
 
 struct fontColour
 {
