@@ -1,5 +1,6 @@
 1.0.1
-Switching desktops by dragging window of of edge improvements.
+Fixed utility windows.
+Switching desktops by dragging window off of edge improvements.
 Moving window to new desktop drags transients with it.
 Removed some unnecessary code.
 Added --enable-debug to configure.
